fix border in dark mode

--- a/less/hux-blog.less
+++ b/less/hux-blog.less
@@ -210,6 +210,7 @@ pre,
 }
 pre {
   background-color: var(--slight-bg-color);
+  border: 1px solid var(--slighter-bg-color);
 
   code {
     display: block;
@@ -873,6 +874,7 @@ footer {
       padding: 10px;
       background-color: var(--bg-color);
       border-radius: 0;
+      border: 1px solid var(--slighter-bg-color);
       @media only screen and (min-width: 768px) {
         font-size: 14px;
         padding: 15px 25px;
